# anz

./: .gitignore  Cargo.toml  Dockerfile  README.md  REQUIREMENTS.md  anz.toml.example  justfile
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  models.rs
src/cli/: client.rs  mod.rs  realm.rs  serve.rs  user.rs
src/crypto/: csrf.rs  keys.rs  mod.rs  password.rs  pkce.rs  token.rs
src/db/: auth_code.rs  client.rs  migrations.rs  mod.rs  realm.rs  refresh_token.rs  session.rs  signing_key.rs  user.rs
src/server/: authorize.rs  discovery.rs  error.rs  jwks.rs  mod.rs  password.rs  token.rs  userinfo.rs
templates/: error.html  login.html
